[gd_scene load_steps=7 format=3 uid="uid://0gol80rl46iv"]

[ext_resource type="Script" path="res://UIObjects/CombatUI/ActiveAbilityUI/ActiveAbilityControl.gd" id="1_fksi4"]
[ext_resource type="Texture2D" uid="uid://whpdhel7els1" path="res://UIObjects/Assets/ButtonPrompts/Keyboard & Mouse/Dark/Q_Key_Dark.png" id="2_dixkl"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="3_1rddj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3hwe"]
bg_color = Color(0.109341, 0.109341, 0.109341, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwwh7"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2j63a"]
bg_color = Color(0.881937, 0.881937, 0.881937, 1)

[node name="ActiveAbilityControl" type="Control"]
custom_minimum_size = Vector2(95, 110)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_fksi4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -57.0
offset_right = 42.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k3hwe")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Container" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="AbilityUseKeyTexture" type="TextureRect" parent="PanelContainer/VBoxContainer/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dixkl")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wwwh7")

[node name="AbilityNameLabel" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_1rddj")
theme_override_font_sizes/font_size = 14
text = "Dash"
horizontal_alignment = 1
clip_text = true

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CooldownTracker" type="ProgressBar" parent="PanelContainer/VBoxContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_2j63a")
value = 100.0
show_percentage = false

[node name="CooldownLabel" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_1rddj")
theme_override_font_sizes/font_size = 12
text = "Cooldown"
horizontal_alignment = 1
